Fixed first run Travis CI problems